Fix overflow

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@
 
 body {
 	background-color: #121414;
+	overflow: hidden;
 	/*font-family: 'Montserrat', serif;*/
 }
 
